# ChangeLog for app-editors/emacs-lexbind
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  02 Feb 2011; Ulrich Mueller <ulm@gentoo.org> emacs-lexbind-24.0.9999.ebuild:
  Sync from emacs-vcs.

  26 Oct 2010; Ulrich Mueller <ulm@gentoo.org>
  emacs-lexbind-24.0.9999.ebuild:
  Sync from portage tree.

*emacs-lexbind-24.0.9999 (14 Oct 2010)

  14 Oct 2010; Ulrich Mueller <ulm@gentoo.org>
  -emacs-lexbind-23.1.9999-r1.ebuild, +emacs-lexbind-24.0.9999.ebuild,
  metadata.xml:
  Change branch to lexbind-new. Sync from portage tree.

  11 Mar 2010; Ulrich Mueller <ulm@gentoo.org>
  emacs-lexbind-23.1.9999-r1.ebuild:
  Sync from portage tree.

  22 Jan 2010; Ulrich Mueller <ulm@gentoo.org>
  emacs-lexbind-23.1.9999-r1.ebuild:
  Sync from portage tree.

  19 Jan 2010; Ulrich Mueller <ulm@gentoo.org>
  emacs-lexbind-23.1.9999-r1.ebuild:
  Sync from portage tree.

  04 Jan 2010; Ulrich Mueller <ulm@gentoo.org>
  emacs-lexbind-23.1.9999-r1.ebuild:
  Sync from portage tree. Fix URL of HOMEPAGE.

*emacs-lexbind-23.1.9999-r1 (27 Dec 2009)

  27 Dec 2009; Ulrich Mueller <ulm@gentoo.org>
  -emacs-lexbind-23.1.9999.ebuild, +emacs-lexbind-23.1.9999-r1.ebuild:
  Change from CVS to Bazaar.

*emacs-lexbind-23.1.9999 (19 Dec 2009)

  19 Dec 2009; Ulrich Mueller <ulm@gentoo.org>
  -emacs-lexbind-23.0.9999.ebuild, +emacs-lexbind-23.1.9999.ebuild,
  metadata.xml:
  Sync from Portage tree.

*emacs-lexbind-23.0.9999 (09 Sep 2009)

  09 Sep 2009; Ulrich Mueller <ulm@gentoo.org>
  +emacs-lexbind-23.0.9999.ebuild, +metadata.xml:
  Emacs lexical-binding branch.
