@@ -1,13 +1,13 @@
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA1
 
-EBUILD emacs-lexbind-24.0.9999.ebuild 10378 RMD160 856647d3b3159f1e7aeba8f76fb6637b0ebac56e SHA1 69a8097c9530efc43542960dcf46d60d0a89ad37 SHA256 6a1a95971bb7510b67f81c170d02fef5e12e55feb4eb40e2e78eb33950eafb92
-MISC ChangeLog 1592 RMD160 50b2f7f0724fe86d33029ce8dc42a8755c0680f5 SHA1 5ecad1284254f1b67d03773bac76acea39902b82 SHA256 cabda24218a2b686c7e69c53357fd09fce076dbd6d6762feae3c1e1dce3c48de
-MISC metadata.xml 1842 RMD160 57ca3c2d25e695ead4faa6cb01b4d7a03939b511 SHA1 1960513308596b38c3ad7cd248924c903611d39b SHA256 9ebd8972aea68e7b3fd62915725ca35d0678b218d922a467a2c978fe44312ddb
+EBUILD emacs-lexbind-24.0.9999.ebuild 10385 RMD160 b9afc4c5099fc68a680a4a6c2e9b5a5486f21754 SHA1 054eb4821e7355138bd6410e709f46109985b7d2 SHA256 10f0f895a6c3ef38f069e521ad2d28bd479a06f3a7f4e869914a2ef0cb5131ea
+MISC ChangeLog 1711 RMD160 74ca6471e069dd02f290d80730ef88afdc7f242e SHA1 4927e750831ed90789be513ce32cfb81496ecd10 SHA256 742c14e527e109b42ac5bfa4655cfb3236b7088533a4b9413987245fb66bf8ef
+MISC metadata.xml 1801 RMD160 606c780a3e86f485699157f14a35ca0e5da1d3c2 SHA1 05839ee25c6f6389e8eb80d783df895d59600a90 SHA256 bdc233a1795f52900dbe4d0a39c0e56d4eb5ba1c4842b9c46bae47f7052d5d74
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.17 (GNU/Linux)
 
-iEYEARECAAYFAk1f/d4ACgkQOeoy/oIi7uw7LQCeKi1r8j1nS3jspMKnrV/7U1i3
-wfsAn2AU9PU28PsNGmQyc9CbpTd/zpAL
-=/3k9
+iEYEARECAAYFAk1wA1YACgkQOeoy/oIi7uz1twCePXBpVjtooDjofZUG2bypM8dZ
+9DIAmwWqHN9mLt/KYcSAlMM8+wsUAYdW
+=I6Y1
 -----END PGP SIGNATURE-----
