@@ -2,6 +2,10 @@
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  03 Mar 2011; Ulrich Mueller <ulm@gentoo.org> emacs-lexbind-24.0.9999.ebuild,
+  metadata.xml:
+  Sync from emacs-vcs.
+
   02 Feb 2011; Ulrich Mueller <ulm@gentoo.org> emacs-lexbind-24.0.9999.ebuild:
   Sync from emacs-vcs.
 
